# python_sandbox

./: pyproject.toml
src/asyncio/: fire_and_forget.py  fire_and_forget_with_decorator.py  nested_event_loop.py  parallel.py  sequential.py  simple.py
src/generator/: async_generator_asend.py  async_generator_yield.py  generator_return.py  generator_send.py  generator_yield.py
src/multiprocessing/: server_process_manager_in_class.py  server_process_manager_in_class_with_lock.py  server_process_ng_case1.py  server_process_ng_case2.py  server_process_ng_case3.py  server_process_simple.py  shared_pool_Process.py  shared_pool_ProcessPoolExecutor.py
src/unittest/: scraping_base_test_case.py  test_scraping.py  test_simple.py
src/unittest/child/: test_simple_child.py
src/unittest/document_roots/TestScraping/: hello_world.html
src/unittest/mixin/: base_test_case.py  test_scraping.py  test_webserver.py
src/unittest/mock/: real.py  test_mock.py
src/unittest/with_base_class/: base_test_case.py  test_scraping.py
