[tool.poetry]
name = "python_sandbox"
version = "0.1.0"
description = ""
authors = ["rinoguchi <inogu1979@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyppeteer = "^0.2.2"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
